--- a/public/index.html
+++ b/public/index.html
@@ -18,18 +18,16 @@
 
 	<h1> We're All Gonna Die</h1>
 
-		<div id="name"></div>
+		<div id='container'></div>
 		
 
 
 
 
-		
 
 
 
-		
-		<!-- <div class = "name"><b>Asteroids Data:<b></div> -->
+
 		
 		<h2> Only One Man Can Save Us.</h2>
 		<a href="https://chucknorris.com/"> Click here to find out</a>
